[gd_scene load_steps=54 format=2]

[ext_resource path="res://player/playerCam.gd" type="Script" id=1]
[ext_resource path="res://assets/ballSkin.obj" type="ArrayMesh" id=2]
[ext_resource path="res://player/basicPlayer.cs" type="Script" id=3]
[ext_resource path="res://player/shadowCast.gd" type="Script" id=4]
[ext_resource path="res://assets/Staatliches-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://menus/scripts/statUI.gd" type="Script" id=6]
[ext_resource path="res://player/statusHUD.gd" type="Script" id=7]
[ext_resource path="res://player/tipNote.gd" type="Script" id=8]
[ext_resource path="res://fonts/tipFull.tres" type="DynamicFont" id=9]
[ext_resource path="res://player/moveNote.gd" type="Script" id=10]
[ext_resource path="res://player/speedrunNote.gd" type="Script" id=11]
[ext_resource path="res://fonts/tipHalf.tres" type="DynamicFont" id=12]
[ext_resource path="res://fonts/tipSmall.tres" type="DynamicFont" id=13]
[ext_resource path="res://player/prNote.gd" type="Script" id=14]
[ext_resource path="res://fonts/stat.tres" type="DynamicFont" id=15]

[sub_resource type="SphereShape" id=19]

[sub_resource type="SphereMesh" id=17]

[sub_resource type="SphereShape" id=3]

[sub_resource type="BoxShape" id=18]

[sub_resource type="SpatialMaterial" id=61]
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="PrismMesh" id=62]

[sub_resource type="StyleBoxFlat" id=57]
bg_color = Color( 1, 0.219608, 0.639216, 0.882353 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 0.956863, 0.980392, 0.882353 )
border_blend = true
corner_radius_top_right = 6
corner_radius_bottom_right = 6
shadow_color = Color( 1, 0.396078, 0.721569, 0.882353 )

[sub_resource type="StyleBoxFlat" id=58]
bg_color = Color( 0, 0, 0, 0 )

[sub_resource type="StyleBoxFlat" id=59]
bg_color = Color( 0.219608, 1, 0.815686, 0.882353 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.686275, 1, 0.929412, 0.882353 )
corner_radius_top_right = 6
corner_radius_bottom_right = 6
shadow_color = Color( 0.490196, 1, 0.878431, 0.882353 )

[sub_resource type="StyleBoxFlat" id=60]
bg_color = Color( 0, 0, 0, 0 )

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 0.384314, 1, 0.368627, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.105882, 0.203922, 0.101961, 0.784314 )
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color( 0.356863, 1, 0.337255, 0.235294 )

[sub_resource type="StyleBoxFlat" id=21]
bg_color = Color( 0.164706, 0.341176, 0.160784, 0.588235 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.105882, 0.203922, 0.101961, 0.784314 )
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=38]
bg_color = Color( 0.384314, 1, 0.368627, 0.470588 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.105882, 0.203922, 0.101961, 0.784314 )
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color( 0.356863, 1, 0.337255, 0.235294 )

[sub_resource type="StyleBoxEmpty" id=39]

[sub_resource type="StyleBoxFlat" id=25]
bg_color = Color( 0.180392, 0.996078, 0.882353, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.0666667, 0.211765, 0.192157, 0.784314 )
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color( 0.00784314, 0.972549, 0.835294, 0.235294 )

[sub_resource type="StyleBoxFlat" id=26]
bg_color = Color( 0.121569, 0.341176, 0.305882, 0.588235 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.0666667, 0.211765, 0.192157, 0.784314 )
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=40]
bg_color = Color( 0.180392, 0.996078, 0.882353, 0.470588 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.0666667, 0.211765, 0.192157, 0.784314 )
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color( 0.00784314, 0.972549, 0.835294, 0.235294 )

[sub_resource type="StyleBoxEmpty" id=41]

[sub_resource type="StyleBoxFlat" id=46]
bg_color = Color( 0.909804, 0.290196, 0.980392, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.156863, 0.0313726, 0.145098, 0.784314 )
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color( 0.972549, 0.00784314, 0.87451, 0.235294 )

[sub_resource type="StyleBoxFlat" id=47]
bg_color = Color( 0.356863, 0.188235, 0.341176, 0.588235 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.156863, 0.0313726, 0.145098, 0.784314 )
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=29]
bg_color = Color( 0.909804, 0.290196, 0.980392, 0.470588 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.156863, 0.0313726, 0.145098, 0.784314 )
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color( 0.972549, 0.00784314, 0.87451, 0.235294 )

[sub_resource type="StyleBoxEmpty" id=42]

[sub_resource type="StyleBoxFlat" id=48]
bg_color = Color( 1, 0.219608, 0.27451, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.141176, 0.0352941, 0.054902, 0.784314 )
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color( 0.972549, 0.00784314, 0.188235, 0.235294 )

[sub_resource type="StyleBoxFlat" id=49]
bg_color = Color( 0.388235, 0.152941, 0.196078, 0.588235 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.141176, 0.0352941, 0.054902, 0.784314 )
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=27]
bg_color = Color( 1, 0.219608, 0.27451, 0.470588 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.141176, 0.0352941, 0.054902, 0.784314 )
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color( 0.972549, 0.00784314, 0.188235, 0.235294 )

[sub_resource type="StyleBoxEmpty" id=43]

[sub_resource type="StyleBoxFlat" id=50]
bg_color = Color( 1, 0.635294, 0.12549, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.152941, 0.109804, 0.0509804, 0.784314 )
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color( 1, 0.588235, 0, 0.235294 )

[sub_resource type="StyleBoxFlat" id=51]
bg_color = Color( 0.396078, 0.301961, 0.164706, 0.588235 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.152941, 0.109804, 0.0509804, 0.784314 )
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=23]
bg_color = Color( 1, 0.635294, 0.12549, 0.470588 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.152941, 0.109804, 0.0509804, 0.784314 )
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color( 1, 0.588235, 0, 0.235294 )

[sub_resource type="StyleBoxEmpty" id=44]

[sub_resource type="StyleBoxFlat" id=52]
bg_color = Color( 0.909804, 1, 0.290196, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.160784, 0.180392, 0.0392157, 0.784314 )
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color( 0.909804, 1, 0.290196, 0.235294 )

[sub_resource type="StyleBoxFlat" id=53]
bg_color = Color( 0.313726, 0.341176, 0.145098, 0.588235 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.160784, 0.180392, 0.0392157, 0.784314 )
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=31]
bg_color = Color( 0.909804, 1, 0.290196, 0.470588 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.160784, 0.180392, 0.0392157, 0.784314 )
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color( 0.909804, 1, 0.290196, 0.235294 )

[sub_resource type="StyleBoxEmpty" id=45]

[sub_resource type="StyleBoxFlat" id=36]
bg_color = Color( 1, 0.996078, 0.858824, 0.235294 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 1, 0.988235, 0.780392, 0.882353 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="DynamicFont" id=66]
size = 23
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=67]
size = 42
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=65]
size = 24
use_filter = true
font_data = ExtResource( 5 )

[node name="PlayerBall" type="KinematicBody" groups=["players"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 76.523, 43.104, -147.733 )
collision_layer = 0
collision_mask = 3
script = ExtResource( 3 )

[node name="skinBody" type="Spatial" parent="."]
transform = Transform( 0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 0, 0, 0 )

[node name="BallSkin" type="MeshInstance" parent="skinBody"]
transform = Transform( 0.21, 0, 0, 0, 0.21, 0, 0, 0, 0.21, 0, 0, 0 )
layers = 4
cast_shadow = 0
generate_lightmap = false
mesh = ExtResource( 2 )
skeleton = NodePath("../../CollisionShape")
material/0 = null
material/1 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 0, 0, 0 )
shape = SubResource( 19 )

[node name="Position3D" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 0.939693, 0.34202, 0, -0.34202, 0.939693, 0, 0, 0 )

[node name="playerCam" type="Camera" parent="Position3D"]
transform = Transform( 1, 0, 0, 0, 0.984808, 0.173648, 0, -0.173648, 0.984808, 0, 5, 25 )
cull_mask = 1048573
current = true
fov = 45.0
size = 20.0
near = 10.0
far = 500.0
script = ExtResource( 1 )

[node name="setDelay" type="Timer" parent="Position3D/playerCam"]
one_shot = true

[node name="bufferTimer" type="Timer" parent="Position3D/playerCam"]
one_shot = true

[node name="floorCast" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 2, 0, 0, 0, 1, 0, 1, 0 )
enabled = true

[node name="leewayCast" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 4, 0, 0, 0, 1, 0, 0, 0 )
enabled = true

[node name="trampolineCast" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 4, 0, 0, 0, 1, 0, 0, 0 )
enabled = true
collision_mask = 32
collide_with_areas = true
collide_with_bodies = false

[node name="shadowCast" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 15, 0, 0, 0, 1, 0, 0, 0 )
enabled = true
script = ExtResource( 4 )

[node name="shadowSkin" type="MeshInstance" parent="shadowCast"]
transform = Transform( 0.7, 0, 0, 0, 0.04, 0, 0, 0, 0.7, 0, 0, 0 )
layers = 0
cast_shadow = 3
generate_lightmap = false
mesh = SubResource( 17 )
material/0 = null

[node name="deathPlaceTimer" type="Timer" parent="shadowCast"]

[node name="hitBox" type="Area" parent="." groups=["playerHitboxes"]]
collision_layer = 30
collision_mask = 3

[node name="CollisionShape" type="CollisionShape" parent="hitBox"]
transform = Transform( 0.65, 0, 0, 0, 0.65, 0, 0, 0, 0.65, 0, 0, 0 )
shape = SubResource( 3 )

[node name="deathTimer" type="Timer" parent="hitBox"]

[node name="lockOnScanner" type="Area" parent="."]
collision_layer = 6
collision_mask = 0
monitorable = false

[node name="scanBody" type="CollisionShape" parent="lockOnScanner"]
transform = Transform( 25, 0, 0, 0, 6, 0, 0, 0, 25, 0, 1.8, -9 )
shape = SubResource( 18 )

[node name="DashTimer" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="boingTimer" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="preBoingTimer" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="SmushTimer" type="Timer" parent="."]
one_shot = true

[node name="invincibleTimer" type="Timer" parent="."]
one_shot = true

[node name="Arrow" type="MeshInstance" parent="."]
transform = Transform( -0.3, 4.52987e-08, 0, -4.52987e-08, -0.3, 0, 0, 0, 0.3, 0, 2, 0 )
visible = false
material_override = SubResource( 61 )
cast_shadow = 0
mesh = SubResource( 62 )
material/0 = null

[node name="statusHUD" type="Control" parent="."]
anchor_left = 0.09
anchor_top = 0.956
anchor_right = 0.09
anchor_bottom = 0.956
margin_left = -172.0
margin_top = -1043.0
margin_right = 1747.0
margin_bottom = 52.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hpBar" type="ProgressBar" parent="statusHUD"]
anchor_left = 0.094
anchor_top = 0.902
anchor_right = 0.328
anchor_bottom = 0.927
margin_left = -4.56696
margin_top = 0.151489
margin_right = -4.08698
margin_bottom = 0.151428
custom_styles/fg = SubResource( 57 )
custom_styles/bg = SubResource( 58 )
max_value = 300.0
value = 300.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="energyBar" type="ProgressBar" parent="statusHUD"]
anchor_left = 0.094
anchor_top = 0.934
anchor_right = 0.328
anchor_bottom = 0.959
margin_left = -4.56696
margin_top = 0.111572
margin_right = -4.08701
margin_bottom = 0.111572
custom_styles/fg = SubResource( 59 )
custom_styles/bg = SubResource( 60 )
max_value = 300.0
value = 300.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="statUI" type="Control" parent="."]
visible = false
anchor_left = 0.748
anchor_top = 0.722
anchor_right = 1.0
anchor_bottom = 0.991
margin_left = 382.08
margin_top = 300.24
margin_bottom = 9.71997
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gravityBar" type="ProgressBar" parent="statUI"]
margin_left = -323.65
margin_top = -229.412
margin_right = 76.3501
margin_bottom = -199.412
custom_styles/fg = SubResource( 20 )
custom_styles/bg = SubResource( 21 )
max_value = 30.0
step = 0.0
rounded = true
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="preSpendBar" type="ProgressBar" parent="statUI/gravityBar"]
margin_right = 400.0
margin_bottom = 30.0
custom_styles/fg = SubResource( 38 )
custom_styles/bg = SubResource( 39 )
max_value = 30.0
step = 1.0
rounded = true
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="statUI/gravityBar"]
modulate = Color( 1, 1, 1, 0.941176 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -14.5
margin_right = 32.0
margin_bottom = 14.5
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 15 )
text = "Gravity"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tractionBar" type="ProgressBar" parent="statUI"]
anchor_left = 0.03
anchor_top = 0.871
anchor_right = 0.03
anchor_bottom = 0.871
margin_left = -326.703
margin_top = -194.412
margin_right = 73.2972
margin_bottom = -164.412
custom_styles/fg = SubResource( 25 )
custom_styles/bg = SubResource( 26 )
max_value = 30.0
step = 0.0
rounded = true
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="preSpendBar" type="ProgressBar" parent="statUI/tractionBar"]
anchor_left = 0.03
anchor_top = 0.871
anchor_right = 0.03
anchor_bottom = 0.871
margin_left = -12.0
margin_top = -26.13
margin_right = 388.0
margin_bottom = 3.87
custom_styles/fg = SubResource( 40 )
custom_styles/bg = SubResource( 41 )
max_value = 30.0
step = 1.0
rounded = true
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="statUI/tractionBar"]
modulate = Color( 1, 1, 1, 0.941176 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -43.0
margin_top = -14.5
margin_right = 43.0
margin_bottom = 14.5
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 15 )
text = "Handling"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bounceBar" type="ProgressBar" parent="statUI"]
anchor_left = 0.03
anchor_top = 0.901
anchor_right = 0.03
anchor_bottom = 0.901
margin_left = -326.703
margin_top = -159.412
margin_right = 73.2972
margin_bottom = -129.412
custom_styles/fg = SubResource( 46 )
custom_styles/bg = SubResource( 47 )
max_value = 30.0
step = 0.0
rounded = true
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="preSpendBar" type="ProgressBar" parent="statUI/bounceBar"]
anchor_left = 0.03
anchor_top = 0.901
anchor_right = 0.03
anchor_bottom = 0.901
margin_left = -12.0
margin_top = -27.03
margin_right = 388.0
margin_bottom = 2.97
custom_styles/fg = SubResource( 29 )
custom_styles/bg = SubResource( 42 )
max_value = 30.0
step = 1.0
rounded = true
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="statUI/bounceBar"]
modulate = Color( 1, 1, 1, 0.941176 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -14.5
margin_right = 32.0
margin_bottom = 14.5
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 15 )
text = "Bounce"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="girthBar" type="ProgressBar" parent="statUI"]
anchor_left = 0.03
anchor_top = 0.901
anchor_right = 0.03
anchor_bottom = 0.901
margin_left = -326.703
margin_top = -124.412
margin_right = 73.2972
margin_bottom = -94.4117
custom_styles/fg = SubResource( 48 )
custom_styles/bg = SubResource( 49 )
max_value = 30.0
step = 0.0
rounded = true
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="preSpendBar" type="ProgressBar" parent="statUI/girthBar"]
anchor_left = 0.03
anchor_top = 0.901
anchor_right = 0.03
anchor_bottom = 0.901
margin_left = -12.0
margin_top = -27.03
margin_right = 388.0
margin_bottom = 2.97
custom_styles/fg = SubResource( 27 )
custom_styles/bg = SubResource( 43 )
max_value = 30.0
step = 1.0
rounded = true
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="statUI/girthBar"]
modulate = Color( 1, 1, 1, 0.941176 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -31.5
margin_top = -14.5
margin_right = 31.5
margin_bottom = 14.5
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 15 )
text = "Volume"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="speedBar" type="ProgressBar" parent="statUI"]
anchor_left = 0.03
anchor_top = 0.841
anchor_right = 0.03
anchor_bottom = 0.841
margin_left = -326.703
margin_top = -89.4117
margin_right = 73.2972
margin_bottom = -59.4117
custom_styles/fg = SubResource( 50 )
custom_styles/bg = SubResource( 51 )
max_value = 30.0
step = 0.0
rounded = true
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="preSpendBar" type="ProgressBar" parent="statUI/speedBar"]
anchor_left = 0.03
anchor_top = 0.841
anchor_right = 0.03
anchor_bottom = 0.841
margin_left = -12.0
margin_top = -25.23
margin_right = 388.0
margin_bottom = 4.77
custom_styles/fg = SubResource( 23 )
custom_styles/bg = SubResource( 44 )
max_value = 30.0
step = 1.0
rounded = true
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="statUI/speedBar"]
modulate = Color( 1, 1, 1, 0.941176 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -26.0
margin_top = -30.5
margin_right = 26.0
margin_bottom = 30.5
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 15 )
text = "Speed"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="energyBar" type="ProgressBar" parent="statUI"]
anchor_left = 0.03
anchor_top = 0.901
anchor_right = 0.03
anchor_bottom = 0.901
margin_left = -326.703
margin_top = -54.4117
margin_right = 73.2972
margin_bottom = -24.4117
custom_styles/fg = SubResource( 52 )
custom_styles/bg = SubResource( 53 )
max_value = 30.0
step = 0.0
rounded = true
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="preSpendBar" type="ProgressBar" parent="statUI/energyBar"]
modulate = Color( 1, 1, 1, 0.588235 )
anchor_left = 0.03
anchor_top = 0.901
anchor_right = 0.03
anchor_bottom = 0.901
margin_left = -12.0
margin_top = -27.03
margin_right = 388.0
margin_bottom = 2.97
custom_styles/fg = SubResource( 31 )
custom_styles/bg = SubResource( 45 )
max_value = 30.0
step = 1.0
rounded = true
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="statUI/energyBar"]
modulate = Color( 1, 1, 1, 0.941176 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -30.5
margin_top = -14.5
margin_right = 30.5
margin_bottom = 14.5
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 15 )
text = "Energy"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="targetBar" type="ProgressBar" parent="statUI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -430.63
margin_top = -231.2
margin_right = -30.63
margin_bottom = -201.2
rect_scale = Vector2( 1.01, 1.1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_styles/bg = SubResource( 36 )
step = 0.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="inputNote" type="Label" parent="statUI/targetBar"]
anchor_left = -0.001
anchor_top = 0.5
anchor_right = -0.001
anchor_bottom = 0.5
margin_left = -451.307
margin_top = -15.0
margin_right = -8.30703
margin_bottom = 16.0
custom_fonts/font = SubResource( 66 )
text = "D :  + 1    E :  + 5    Space :  Fill"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bpSpendNote" type="Label" parent="statUI"]
margin_left = -120.0
margin_top = -259.0
margin_right = 72.0
margin_bottom = -230.0
custom_fonts/font = ExtResource( 15 )
text = "0 / 90 set"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exitNote" type="Label" parent="statUI"]
margin_left = -326.338
margin_top = -259.412
margin_right = -161.338
margin_bottom = -230.412
custom_fonts/font = ExtResource( 15 )
text = "Press alt to close"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bpSpendAlert" type="Label" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.941176 )
anchor_left = 0.982
anchor_top = 1.0
anchor_right = 0.982
anchor_bottom = 1.0
margin_left = -449.195
margin_top = -75.3036
margin_right = -0.194824
margin_bottom = -9.30359
custom_fonts/font = SubResource( 67 )
text = "Hold Y to spend points!"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tipNote" type="Label" parent="."]
anchor_top = 0.124
anchor_right = 1.0
anchor_bottom = 0.26
margin_top = -0.280006
margin_bottom = 10.8
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_y = 3
custom_constants/shadow_as_outline = 0
custom_fonts/font = ExtResource( 9 )
align = 1
valign = 1
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="tipNote"]
one_shot = true

[node name="moveNote" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -230.0
margin_top = 32.0
margin_right = 232.0
margin_bottom = 73.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 13 )
align = 1
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="speedrunNote" type="Label" parent="."]
anchor_left = 0.986
anchor_top = 0.04
anchor_right = 0.987
anchor_bottom = 0.04
margin_left = -304.08
margin_top = -22.8
margin_right = -0.360107
margin_bottom = 23.2
custom_fonts/font = ExtResource( 12 )
align = 2
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="prNote" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -234.0
margin_top = 42.0
margin_right = -18.0
margin_bottom = 60.0
custom_colors/font_color = Color( 0.894118, 0.733333, 0, 1 )
custom_fonts/font = SubResource( 65 )
align = 2
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="Position3D/playerCam/bufferTimer" to="Position3D/playerCam" method="_on_bufferTimer_timeout"]
[connection signal="timeout" from="shadowCast/deathPlaceTimer" to="shadowCast" method="_on_deathPlaceTimer_timeout"]
[connection signal="area_entered" from="hitBox" to="." method="_on_hitBox_area_entered"]
[connection signal="area_exited" from="hitBox" to="." method="_on_hitBox_area_exited"]
[connection signal="timeout" from="hitBox/deathTimer" to="." method="_on_deathTimer_timeout"]
[connection signal="timeout" from="DashTimer" to="." method="_on_DashTimer_timeout"]
[connection signal="timeout" from="boingTimer" to="." method="_on_boingTimer_timeout"]
[connection signal="timeout" from="preBoingTimer" to="." method="_on_preBoingTimer_timeout"]
[connection signal="timeout" from="SmushTimer" to="." method="_on_SmushTimer_timeout"]
[connection signal="timeout" from="invincibleTimer" to="." method="_on_invincibleTimer_timeout"]
[connection signal="timeout" from="tipNote/Timer" to="tipNote" method="_on_Timer_timeout"]
